--- a/.github/workflows/master_first-azure-cloud-app.yml
+++ b/.github/workflows/master_first-azure-cloud-app.yml
@@ -57,7 +57,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'first-azure-cloud-app'
+          app-name: 'webhook-azure-cloud-app'
           slot-name: 'Production'
           package: '*.jar'
           
